examples/front-proxy/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service1
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /serv
          backend:
            serviceName: service1
            servicePort: 8000
        #- path: /banana
        #  backend:
        #    serviceName: banana-service
        #    servicePort: 5678
